<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/source_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_source" />

    <Button
        android:id="@+id/sourceLocationBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/measure_source" />

    <Button
        android:id="@+id/locationAccuracyBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_accuracy_test"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/loadMeasurementsBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/import_measurements"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/closeDebugBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:layout_marginTop="8dp" />
</LinearLayout>