<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app_gradient">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        
        <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Status -->
            <TextView
                android:id="@+id/statusText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_export"
                android:textColor="@color/text_white"
                android:layout_marginBottom="12dp" />

            <!-- Export to JSON -->
            <Button
                android:id="@+id/exportBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/export_json"
                android:backgroundTint="@color/secondary_blue"
                android:textColor="@color/text_white"
                android:layout_marginBottom="12dp" />

            <!-- Server Connection -->
            <Button
                android:id="@+id/serverConfigBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/server_configure"
                android:backgroundTint="@color/secondary_blue"
                android:textColor="@color/text_white"
                android:layout_marginBottom="12dp" />

            <Button
                android:id="@+id/sendWifiBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wifi_send"
                android:backgroundTint="@color/secondary_blue"
                android:textColor="@color/text_white"
                android:layout_marginBottom="12dp" />

            <!-- Run Algorithm -->
            <Button
                android:id="@+id/showServerFilesBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondary_blue"
                android:textColor="@color/text_white"
                android:text="@string/server_run_algorithm" />

            <!-- Close -->
            <Button
                android:id="@+id/closeExportBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/close"
                android:layout_marginTop="12dp"
                android:visibility="gone"
                android:backgroundTint="@color/secondary_blue"
                android:textColor="@color/text_white" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/navbar_bg"
        app:itemIconTint="@color/bottom_nav_color"
        app:itemTextColor="@color/bottom_nav_color"
        app:menu="@menu/bottom_nav_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>